gitignore ignores kitti_results and model_data folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore kitti_data folder
 kitti_data/
+kitti_results/
+model_data_keras2/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
